--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -12,18 +12,18 @@
     <title>Roach dashboard</title>
 </head>
 
-<body class="bg-gray-800">
-    <div class="md:container md:mx-auto min-h-screen bg-slate-700 text-sm px-12 rounded-lg text-gray-300"> <!-- Content wrapper -->
+<body class="bg-white">
+    <div class="md:container md:mx-auto min-h-screen bg-slate-100 text-sm px-12 rounded-lg text-gray-800"> <!-- Content wrapper -->
         <h1 class="text-3xl font-bold pt-12 text-center">ROACH</h1>
-        <h1 class="text-1xl font-bold pb-12 text-center text-gray-400">DASHBOARD</h1>
+        <h1 class="text-1xl font-bold pb-12 text-center text-gray-600">DASHBOARD</h1>
         <div class="table w-full pb-2 cursor-pointer pt-12" hx-trigger="load, every 3s" hx-get="/dashboard/runners" hx-swap="innerHTML"
         hx-target="#runnerlist">
             <div class="table-header-group ">
-                <div class="table-row bg-slate-800">
-                    <div class="table-cell text-left pl-2 pb-4 pt-4">Runner name</div>
-                    <div class="table-cell text-left pl-2">Command</div>
-                    <div class="table-cell text-left pl-2">Status</div>
-                    <div class="table-cell text-left pl-2">Action</div>
+                <div class="table-row bg-slate-300 ">
+                    <div class="table-cell text-left pl-2 pb-4 pt-4 border-t border-gray-500">Runner name</div>
+                    <div class="table-cell text-left pl-2 border-t border-gray-500">Command</div>
+                    <div class="table-cell text-left pl-2 border-t border-gray-500">Status</div>
+                    <div class="table-cell text-left pl-2 border-t border-gray-500">Action</div>
                 </div>
             </div>
             <div class="table-row-group" id="runnerlist">
