--- a/dashboard/runners.html
+++ b/dashboard/runners.html
@@ -1,8 +1,5 @@
 {{ range $key, $value := . }}
-    <div class="table-row bg-gray-300 hover:bg-slate-100 active:focus:bg-slate-600 text-black text-s"
-        >
-       
-        
+    <div class="table-row bg-gray-300 hover:bg-slate-100 active:focus:bg-slate-600 text-black text-s">
         <div class="table-cell border-b border-l border-gray-500 pl-2 pb-2 " hx-trigger="click" hx-target="#consoleOut" hx-get="/dashboard/liveout?runnerName={{$key}}" hx-swap="innerHTML">{{ $key }} </div>
         <div class="table-cell border-b border-gray-500 p-2" hx-trigger="click" hx-target="#consoleOut" hx-get="/dashboard/liveout?runnerName={{$key}}" hx-swap="innerHTML">{{ $value.CmdString }} {{ $value.Args}}</div>
         <div class="table-cell border-b border-gray-500 {{ $value.GetStatusColor }} p-2"hx-trigger="click" hx-target="#consoleOut" hx-get="/dashboard/liveout?runnerName={{$key}}" hx-swap="innerHTML">{{ $value.Status }}</div>
